extends Node
# preload the script file that defines all data classes 
const CaseClass = preload("res://dataclass/case_class.gd")
const ClientClass = preload("res://dataclass/client_class.gd")
const ConsultClass = preload("res://dataclass/consult_class.gd")
const UserClass = preload("res://dataclass/user_class.gd")
const paginateInfo = preload("res://dataclass/paginationInfo.gd")


# now you can use CaseData in this script
func _ready():
	pass
